@startuml

class Display {
    getColumns()
    getRows()
    getRowText()
    show()
}

class StringDisplay{
    string 
    getColumns()
    getRows()
    getRowText()
}

Border : display

class SideBorder{
    borderChar
    getColumns()
    getRows()
    getRowText()
}

class FullBorder{
    getColumns()
    getRows()
    getRowText()
    makeLine()
}

Display <|-- StringDisplay 
Display <|-- Border
Border <|-- SideBorder
Border <|-- FullBorder
Border o--> Display

@enduml


